# jhbuild

./: .gitattributes  .gitignore  Makefile.am  autogen.sh  configure.ac  configure.scan  curlhere.html  manpage.html
.github/workflows/: bandit.yml  codeql.yml  pyre.yml  pysa.yml
build-aux/: aclocal.m4
jhbuild/commands/: checkbranches.py
modulesets/: bootstrap.modules  gtk-osx-bootstrap.modules  gtk-osx-gstreamer.modules  gtk-osx-gtkmm.modules  gtk-osx-python.modules  gtk-osx-random.modules  gtk-osx-themes.modules  gtk-osx-universal.modules  gtk-osx-unsupported.modules  gtk-osx.modules
